[package]
name = "continue_fuzz"
version = "0.1.0"
edition = "2021"

[features]
trace-api = []

[dependencies]
alloy = { version = "0.2.0", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
tokio = {version = "1.38.1", features = ["rt-multi-thread", "full"]}
eyre = "0.6.12"
futures-util = "0.3"
alloy-rpc-types = {version = "0.2.0", features = ["trace"]}
alloy-providers = "0.0.0-reserved"
serde_json = "1.0.120"
serde = "1.0.204"
evmole = "0.3.6"
alloy-dyn-abi = "0.7.7"
cast = { git = "https://github.com/foundry-rs/foundry", rev = "af97b2c75cbcfaba23462998ae75ca082bcca1f2" }
